--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div>
-      <h1>Kathis & KJs favorite places</h1>
+    <div class="container">
+      <div class="row">
+        <h1>K&KJ favs</h1>
+      </div>
+      <div class="sidenav">
+        <a class="closebtn">&times;</a>
+        <a>blabla</a>
+        <a>blabla</a>
+        <a>blabla</a>
+        <a>blabla</a>
+      </div>
+      <div id="map"></div>
     </div>
-    <div id="map"></div>
+
     <script src="js/googleMaps.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDk7OBsWwKuggXanGS6v54vuxx3stJiKSs&callback=initMap"
     async defer></script>
