feat: Change colors of map and frame

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <h1>K&KJ favs</h1>
+        <h1 class="title">K & KJs NYC favs</h1>
       </div>
       <div class="sidenav">
         <a class="closebtn">&times;</a>
@@ -21,6 +21,7 @@
       <div id="map"></div>
     </div>
 
+    <script src="js/Colors_Random.js"></script>
     <script src="js/googleMaps.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDk7OBsWwKuggXanGS6v54vuxx3stJiKSs&callback=initMap"
     async defer></script>
