feat: Improve layout

--- a/index.html
+++ b/index.html
@@ -8,17 +8,24 @@
   </head>
   <body>
     <div class="container">
+      <div class="row hero">
+        <div class="col-7">
+        <h1 class="title">Kathis KJs NYC favs</h1>
+        </div>
+        <div class="col-5">
+        <h1>Weather NYC</h1>
+        </div>
+      </div>
       <div class="row">
-        <h1 class="title">K & KJs NYC favs</h1>
+        <div class="sidenav">
+          <a class="closebtn">&times;</a>
+          <a>blabla</a>
+          <a>blabla</a>
+          <a>blabla</a>
+          <a>blabla</a>
+        </div>
+        <div id="map" class="col-12"></div>
       </div>
-      <div class="sidenav">
-        <a class="closebtn">&times;</a>
-        <a>blabla</a>
-        <a>blabla</a>
-        <a>blabla</a>
-        <a>blabla</a>
-      </div>
-      <div id="map"></div>
     </div>
 
     <script src="js/Colors_Random.js"></script>
