--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
       </div>
       <div class="row">
         <div class="sidenav">
-          <a class="closebtn">&times;</a>
-          <a>blabla</a>
-          <a>blabla</a>
-          <a>blabla</a>
-          <a>blabla</a>
+          <ul data-bind="foreach: locations">
+            <li class="closebtn">&times;</a>
+            <li data-bind="text: title"></li>
+          </ul>
         </div>
         <div id="map" class="col-12"></div>
       </div>
     </div>
 
+    <script src="js/lib/knockout-3.2.0.js"></script>
     <script src="js/Colors_Random.js"></script>
+    <script src="js/model.js"></script>
+    <script src="js/view.js"></script>
     <script src="js/googleMaps.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDk7OBsWwKuggXanGS6v54vuxx3stJiKSs&callback=initMap"
     async defer></script>
