feat: Add infowindow to markers

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>KKs fav places</title>
+    <title>NYC favorites</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
@@ -30,8 +30,8 @@
     <script src="js/lib/knockout-3.2.0.js"></script>
     <script src="js/Colors_Random.js"></script>
     <script src="js/model.js"></script>
-    <script src="js/view.js"></script>
     <script src="js/googleMaps.js"></script>
+    <script src="js/view.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDk7OBsWwKuggXanGS6v54vuxx3stJiKSs&callback=initMap"
     async defer></script>
   </body>
