feat: Add infowindow in corner based on a div

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <li data-bind="text: title"></li>
           </ul>
         </div>
+        <div id="corner-infowindow">
+          <div id="close-thick"></div>
+        </div>
         <div id="map" class="col-12"></div>
       </div>
     </div>
