fix: Bug caused by experimental google maps version

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script src="js/model.js"></script>
     <script src="js/googleMaps.js"></script>
     <script src="js/view.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDk7OBsWwKuggXanGS6v54vuxx3stJiKSs&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyDk7OBsWwKuggXanGS6v54vuxx3stJiKSs&v=3&callback=initMap"
     async defer></script>
   </body>
 </html>
