feat: Change style of markers when hover / click

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <div id="map" class="col-12"></div>
       </div>
     </div>
+    <div class="row">
+      <div class="license-text">Icons made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+    </div>
 
     <script src="js/lib/knockout-3.2.0.js"></script>
     <script src="js/Colors_Random.js"></script>
