feat: Style weather forecast

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="weather-slots col-12">
               <div class="weather-slots" data-bind="style: {width: weatherForecast.day01.width}">
                 <div class="weather-slots col-12">
-                  <p data-bind="text: weatherForecast.day01.name"></p>
+                  <h2 data-bind="text: weatherForecast.day01.name"></h2>
                 </div>
                 <div class="col-12 weather-slots" data-bind="foreach: weatherForecast.day01.weather">
                   <div data-bind="style: {width: width}">
@@ -29,7 +29,7 @@
               </div>
               <div class="weather-slots" data-bind="style: {width: weatherForecast.day02.width}">
                 <div class="weather-slots col-12">
-                  <p data-bind="text: weatherForecast.day02.name"></p>
+                  <h2 data-bind="text: weatherForecast.day02.name"></h2>
                 </div>
                 <div class="col-12 weather-slots" data-bind="foreach: weatherForecast.day02.weather">
                   <div data-bind="style: {width: width}">
@@ -41,7 +41,7 @@
               </div>
               <div class="weather-slots" data-bind="style: {width: weatherForecast.day03.width}">
                 <div class="weather-slots col-12">
-                  <p data-bind="text: weatherForecast.day03.name"></p>
+                  <h2 data-bind="text: weatherForecast.day03.name"></h2>
                 </div>
                 <div class="col-12 weather-slots" data-bind="foreach: weatherForecast.day03.weather">
                   <div data-bind="style: {width: width}">
