fix: Change http to https

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <script src="js/googleMaps.js"></script>
     <script src="js/view.js"></script>
     <script src="js/weatherView.js"></script>
-    <script src="http://polman.herokuapp.com/api/forecast?url=http://www.yr.no/place/United_States/New_York/New_York/forecast.xml&num=1&jsonp=initWeather" async defer></script>
+    <script src="https://polman.herokuapp.com/api/forecast?url=http://www.yr.no/place/United_States/New_York/New_York/forecast.xml&num=1&jsonp=initWeather" async defer></script>
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&v=3&key=AIzaSyDk7OBsWwKuggXanGS6v54vuxx3stJiKSs&callback=initMap"
     async defer></script>
   </body>
