--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="sidenav">
+        <div id="sidenav">
           <ul>
-            <li class="closebtn">&times;</li>
+            <li class="closebtn" onclick="closeNav()">&times;</li>
           </ul>
           <ul data-bind="foreach: locations">
             <li data-bind="text: title, css: getSelected, click: function(data, event) {$parent.chooseLocation(data, event); getGif(50000, data, event)}, event: {mouseover: $parent.mouseOver, mouseout: $parent.mouseOut}">
@@ -83,6 +83,7 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="js/lib/knockout-3.2.0.js"></script>
     <script src="js/Colors_Random.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/model.js"></script>
     <script src="js/googleMaps.js"></script>
     <script src="js/view.js"></script>
