--- a/index.html
+++ b/index.html
@@ -4,56 +4,79 @@
     <title>NYC favorites</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/lib/bootstrap.min.css">
+    <link rel="stylesheet" href="css/lib/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div class="container">
-      <div class="row">
-        <div class="col-5">
-        <h1 class="title"><button data-bind="css: getKathiStatus, click: toggleKathi">Kathis</button><button data-bind="css: getKJStatus, click: toggleKJ">KJs</button> NYC favs</h1>
+      <div id="top-nav" class="row">
+        <div class="col-md-5">
+          <h1 class="title">NYC favorites</h1>
         </div>
-        <div class="col-7" data-bind="stopBinding: true">
-          <div id="weather">
-            <div class="weather-slots col-12">
-              <div class="weather-slots" data-bind="style: {width: weatherForecast.day01.width}">
-                <div class="weather-slots col-12">
-                  <h2 data-bind="text: weatherForecast.day01.name"></h2>
+        <div class="col-md-7" data-bind="stopBinding: true">
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">
+            Weather in NYC
+          </button>
+
+          <!-- Modal -->
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="myModalLabel">Weather in NYC</h4>
                 </div>
-                <div class="col-12 weather-slots" data-bind="foreach: weatherForecast.day01.weather">
-                  <div data-bind="style: {width: width}">
-                    <p data-bind="text: timeString"></p>
-                    <p data-bind="text: temperature"></p>
-                    <img class="weather-symbol" data-bind="attr: {src: symbol}">
+                <div class="modal-body">
+                  <div id="weather">
+                    <div class="weather-slots col-md-12">
+                      <div class="weather-slots" data-bind="style: {width: weatherForecast.day01.width}">
+                        <div class="weather-slots col-md-12">
+                          <h3 data-bind="text: weatherForecast.day01.name"></h3>
+                        </div>
+                        <div class="col-md-12 weather-slots" data-bind="foreach: weatherForecast.day01.weather">
+                          <div data-bind="style: {width: width}">
+                            <p data-bind="text: timeString"></p>
+                            <p data-bind="text: temperature"></p>
+                            <img class="weather-symbol" data-bind="attr: {src: symbol}">
+                          </div>
+                        </div>
+                      </div>
+                      <div class="weather-slots" data-bind="style: {width: weatherForecast.day02.width}">
+                        <div class="weather-slots col-md-12">
+                          <h3 data-bind="text: weatherForecast.day02.name"></h3>
+                        </div>
+                        <div class="col-md-12 weather-slots" data-bind="foreach: weatherForecast.day02.weather">
+                          <div data-bind="style: {width: width}">
+                            <p data-bind="text: timeString"></p>
+                            <p data-bind="text: temperature"></p>
+                            <img class="weather-symbol" data-bind="attr: {src: symbol}">
+                          </div>
+                        </div>
+                      </div>
+                      <div class="weather-slots" data-bind="style: {width: weatherForecast.day03.width}">
+                        <div class="weather-slots col-md-12">
+                          <h3 data-bind="text: weatherForecast.day03.name"></h3>
+                        </div>
+                        <div class="col-md-12 weather-slots" data-bind="foreach: weatherForecast.day03.weather">
+                          <div data-bind="style: {width: width}">
+                            <p data-bind="text: timeString"></p>
+                            <p data-bind="text: temperature"></p>
+                            <img class="weather-symbol" data-bind="attr: {src: symbol}">
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-12">
+                      <p data-bind="text: creditLinkText"></p>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="weather-slots" data-bind="style: {width: weatherForecast.day02.width}">
-                <div class="weather-slots col-12">
-                  <h2 data-bind="text: weatherForecast.day02.name"></h2>
-                </div>
-                <div class="col-12 weather-slots" data-bind="foreach: weatherForecast.day02.weather">
-                  <div data-bind="style: {width: width}">
-                    <p data-bind="text: timeString"></p>
-                    <p data-bind="text: temperature"></p>
-                    <img class="weather-symbol" data-bind="attr: {src: symbol}">
-                  </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
               </div>
-              <div class="weather-slots" data-bind="style: {width: weatherForecast.day03.width}">
-                <div class="weather-slots col-12">
-                  <h2 data-bind="text: weatherForecast.day03.name"></h2>
-                </div>
-                <div class="col-12 weather-slots" data-bind="foreach: weatherForecast.day03.weather">
-                  <div data-bind="style: {width: width}">
-                    <p data-bind="text: timeString"></p>
-                    <p data-bind="text: temperature"></p>
-                    <img class="weather-symbol" data-bind="attr: {src: symbol}">
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12">
-              <p data-bind="text: creditLinkText"></p>
             </div>
           </div>
         </div>
@@ -61,6 +84,7 @@
       <div class="row">
         <div id="sidenav">
           <ul>
+            <li class="toggle-button"><button data-bind="css: getKathiStatus, click: toggleKathi">Kathis</button><button data-bind="css: getKJStatus, click: toggleKJ">KJs</button> favs</li>
             <li><input data-bind="value: filter, valueUpdate: 'afterkeydown'" placeholder="Coffee, food, climbing,..."></li>
             <li class="closebtn" onclick="closeNav()">&times;</li>
           </ul>
@@ -74,14 +98,18 @@
         <div id="corner-infowindow">
           <div id="close-thick"></div>
         </div>
-        <div id="map" class="col-12"></div>
+        <div class="row">
+          <span id="hamburger" onclick="openNav()">&#9776;</span>
+          <div id="map" class="col-xs-12"></div>
+          <div class="col-xs-12 license-text">Icons made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="license-text">Icons made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+      <div class="row">
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="js/lib/bootstrap.min.js"></script>
     <script src="js/lib/knockout-3.2.0.js"></script>
     <script src="js/Colors_Random.js"></script>
     <script src="js/app.js"></script>
