feat: Improve style and UI

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div id="top-nav" class="row">
         <div class="col-md-5">
-          <h1 class="title">NYC favorites</h1>
+          <h1 class="title">Kathi & KJs NYC favorites</h1>
         </div>
         <div class="col-md-7" data-bind="stopBinding: true">
           <!-- Button trigger modal -->
@@ -81,7 +81,6 @@
           </div>
         </div>
       </div>
-      <div class="row">
         <div id="sidenav">
           <ul>
             <li class="toggle-button"><button data-bind="css: getKathiStatus, click: toggleKathi">Kathis</button><button data-bind="css: getKJStatus, click: toggleKJ">KJs</button> favs</li>
@@ -95,16 +94,15 @@
             <img class="powered-by-image" src="img/poweredByGiphy.gif" data-bind="visible: selected">
           </ul>
         </div>
+      <div class="row">
         <div id="corner-infowindow">
           <div id="close-thick"></div>
         </div>
-        <div class="row">
-          <span id="hamburger" onclick="openNav()">&#9776;</span>
+        <div>
           <div id="map" class="col-xs-12"></div>
-          <div class="col-xs-12 license-text">Icons made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+          <span id="hamburger" onclick="openNav()">&#9776;</span>
+          <div id="license-text" class="col-xs-12 col-md-6 license-text"><p>Icons made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a><p></div>
         </div>
-      </div>
-      <div class="row">
       </div>
     </div>
 
