--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <body>
     <div class="container">
       <div id="top-nav" class="row">
-        <div class="col-md-5">
+        <div class="col-md-6">
           <h1 class="title">Kathi & KJs NYC favorites</h1>
         </div>
-        <div class="col-md-7" data-bind="stopBinding: true">
+        <div class="col-md-5" data-bind="stopBinding: true">
           <!-- Button trigger modal -->
           <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">
             Weather in NYC
@@ -72,6 +72,44 @@
                       <p data-bind="text: creditLinkText"></p>
                     </div>
                   </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-1">
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#aboutModal">
+            About Kathi & KJ
+          </button>
+
+          <!-- Modal -->
+          <div class="modal fade" id="aboutModal" tabindex="-1" role="dialog" aria-labelledby="aboutModalLabel">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="aboutModalLabel">About</h4>
+                </div>
+                <div class="modal-body">
+                  <div class="row">
+                    <div class="col-md-6">
+                      <img src="img/kathiandkj.jpeg">
+                    </div>
+                    <div class="col-md-6">
+                      <p>This is us, Kathi and KJ. We live in NYC and love it. With this application we can finally share our favorite locations in this amazing city!</p>
+                      <p>Katharina wrote this app and KJ provided his favorite locations.</p>
+                    <hr>
+                      <p>More information about Katharina:</p>
+                      <p><a href="https://www.linkedin.com/in/katharinakufieta" target="_blank">LinkedIn</a></p>
+                      <p><a href="https://github.com/KatharinaXeniaKufieta" target="_blank">Github</a></p>
+                    </div>
+                  </div>
+
+
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
