fix: About Button Size

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="col-md-1">
           <!-- Button trigger modal -->
           <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#aboutModal">
-            About Kathi & KJ
+            About
           </button>
 
           <!-- Modal -->
