feat: Improve button design

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         <div class="col-md-1">
           <!-- Button trigger modal -->
-          <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#aboutModal">
+          <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#aboutModal">
             About
           </button>
 
