--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <!-- Button trigger modal -->
             <div class="col-md-9">
-              <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">
+              <button id="weather-button" type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">
                 Detailed Weather in NYC
               </button>
             </div>
@@ -33,9 +33,9 @@
                 <div class="modal-content">
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Weather in NYC</h4>
+                    <h4 class="modal-title" >Weather in NYC</h4>
                   </div>
-                  <div class="modal-body row">
+                  <div id="weather-modal-content" class="modal-body row">
                     <div class="col-md-6">
                       <h3 data-bind="text: sunrise"></h3>
                     </div>
@@ -143,8 +143,7 @@
     <script src="js/googleMaps.js"></script>
     <script src="js/view.js"></script>
     <script src="js/weatherView.js"></script>
-    <script src="https://polman.herokuapp.com/api/forecast?url=http://www.yr.no/place/United_States/New_York/New_York/forecast.xml&num=1&jsonp=initWeather" async defer></script>
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&v=3&key=AIzaSyDk7OBsWwKuggXanGS6v54vuxx3stJiKSs&callback=initMap"
-    async defer></script>
+    <script src="https://polman.herokuapp.com/api/forecast?url=http://www.yr.no/place/United_States/New_York/New_York/forecast.xml&num=1&jsonp=initWeather" onerror="weatherHandleError()" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&v=3&key=AIzaSyDk7OBsWwKuggXanGS6v54vuxx3stJiKSs&callback=initMap" onerror="mapsHandleError()" async defer></script>
   </body>
 </html>
